--- a/OOTDAY/app/src/main/res/layout/second_closet_result_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/second_closet_result_fragment.xml
@@ -7,7 +7,7 @@
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/second_loading_title"
+        android:id="@+id/second_result_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20sp"
@@ -30,7 +30,7 @@
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toTopOf="@+id/link_container"
-        app:layout_constraintTop_toBottomOf="@id/second_loading_title"
+        app:layout_constraintTop_toBottomOf="@id/second_result_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
