--- a/OOTDAY/app/src/main/res/navigation/nav_graph.xml
+++ b/OOTDAY/app/src/main/res/navigation/nav_graph.xml
@@ -65,6 +65,12 @@
         android:label="second_closet_picture_fragment"
         tools:layout="@layout/second_closet_picture_fragment"
         >
+
+        <argument
+            android:name="imageUri"
+            app:argType="string" />
+
+
         <action
             android:id="@+id/action_secondClosetPictureFragment_to_secondClosetLoadingFragment"
             app:destination="@id/secondClosetLoadingFragment" />
