feat: 주기능 2번 로직 구현 완

--- a/OOTDAY/app/src/main/res/navigation/nav_graph.xml
+++ b/OOTDAY/app/src/main/res/navigation/nav_graph.xml
@@ -91,7 +91,12 @@
         android:id="@+id/secondClosetResultFragment"
         android:name="com.bottari.ootday.presentation.view.mainView.fragments.SecondClosetResultFragment"
         android:label="second_closet_result_fragment"
-        tools:layout="@layout/second_closet_result_fragment" />
+        tools:layout="@layout/second_closet_result_fragment" >
+        <argument
+            android:name="recommendedItem"
+            app:argType="com.bottari.ootday.domain.model.RecommendedItem" />
+
+    </fragment>
 
 
 
