--- a/OOTDAY/app/src/main/res/layout/second_closet_picture_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/second_closet_picture_fragment.xml
@@ -10,8 +10,8 @@
         android:id="@+id/second_picture_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20sp"
-        android:paddingVertical="10sp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
         android:text="선택한 사진에 어울리는 아이템을 추천해드릴게요."
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textSize="@dimen/body_large_size"
@@ -25,7 +25,7 @@
         android:id="@+id/my_picture_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="20sp"
+        android:layout_marginHorizontal="20dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toTopOf="@+id/find_my_item_button"
@@ -46,9 +46,9 @@
         android:id="@+id/find_my_item_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginBottom="30sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/sl_button_selector"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="이미지에 어울리는 아이템 찾기"
