--- a/OOTDAY/app/src/main/res/layout/second_closet_result_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/second_closet_result_fragment.xml
@@ -10,8 +10,8 @@
         android:id="@+id/second_result_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20sp"
-        android:paddingVertical="30sp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="30dp"
         android:text="OOTDay에서 추천한 아이템을 확인해보세요."
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textSize="@dimen/body_large_size"
@@ -25,8 +25,8 @@
         android:id="@+id/result_picture_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginBottom="10sp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toTopOf="@+id/link_container"
@@ -50,8 +50,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/back_home_button"
         android:gravity="center_vertical"
-        android:layout_marginBottom="25sp"
-        android:layout_marginRight="30sp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="30dp"
         >
 
         <ImageButton
@@ -61,7 +61,7 @@
             android:src="@drawable/ic_move_link"
             android:background="@null"
             android:clickable="false"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="10dp"
             />
 
         <TextView
@@ -81,9 +81,9 @@
         android:id="@+id/back_home_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginBottom="30sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/sl_button_selector"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="홈으로 돌아가기"
