--- a/OOTDAY/app/src/main/res/layout/sign_up_cong_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_cong_activity.xml
@@ -9,8 +9,8 @@
         android:id="@+id/step5_message_line1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60sp"
-        android:paddingHorizontal="30sp"
+        android:layout_marginTop="60dp"
+        android:paddingHorizontal="30dp"
         android:text="가입이 완료되었어요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -22,8 +22,8 @@
         android:id="@+id/step5_message_line2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="30sp"
-        android:layout_marginTop="-38sp"
+        android:paddingHorizontal="30dp"
+        android:layout_marginTop="-38dp"
         android:text="이제 내 옷장을 채우고"
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -35,8 +35,8 @@
         android:id="@+id/step5_message_line3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="30sp"
-        android:layout_marginTop="-38sp"
+        android:paddingHorizontal="30dp"
+        android:layout_marginTop="-38dp"
         android:text="스타일 추천을 받아보세요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_congratulation"
 
-        android:layout_marginBottom="50sp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@+id/move_to_login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
