--- a/OOTDAY/app/src/main/res/values/themes.xml
+++ b/OOTDAY/app/src/main/res/values/themes.xml
@@ -4,11 +4,14 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:statusBarColor">
-            @color/gray_400
+            @color/transparent
         </item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">
             true
         </item>
+        <item name="android:enforceNavigationBarContrast">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
     <style name="Theme.OOTDAY" parent="Base.Theme.OOTDAY" />
