--- a/OOTDAY/app/src/main/res/drawable/btn_check_disabled_number.xml
+++ b/OOTDAY/app/src/main/res/drawable/btn_check_disabled_number.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="63sp"
-    android:height="28sp"
+    android:width="63dp"
+    android:height="28dp"
     android:viewportWidth="63"
     android:viewportHeight="28">
   <path
