--- a/OOTDAY/app/src/main/res/drawable/btn_default_check_box.xml
+++ b/OOTDAY/app/src/main/res/drawable/btn_default_check_box.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="12sp"
-    android:height="12sp"
+    android:width="12dp"
+    android:height="12dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
