--- a/OOTDAY/app/src/main/res/drawable/btn_disabled_button.xml
+++ b/OOTDAY/app/src/main/res/drawable/btn_disabled_button.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="344sp"
-    android:height="52sp"
+    android:width="312dp"
+    android:height="48dp"
     android:viewportWidth="312"
     android:viewportHeight="48">
   <path
