--- a/OOTDAY/app/src/main/res/drawable/frm_plus_my_closet.xml
+++ b/OOTDAY/app/src/main/res/drawable/frm_plus_my_closet.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="366sp"
-    android:height="54sp"
+    android:width="320dp"
+    android:height="48dp"
     android:viewportWidth="320"
     android:viewportHeight="48">
   <path
