--- a/OOTDAY/app/src/main/res/drawable/rounded_background.xml
+++ b/OOTDAY/app/src/main/res/drawable/rounded_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/gray_300" />
-    <corners android:radius="16sp" />
+    <corners android:radius="12dp" />
 </shape>
