--- a/OOTDAY/app/src/main/res/layout/closet_mp_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_mp_item.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="34sp"
-    app:cardCornerRadius="12sp"
+    android:layout_height="34dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="0dp"
-    android:layout_margin="4sp">
+    android:layout_margin="4dp">
 
         <TextView
         android:id="@+id/mood_button_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="12sp"
+        android:paddingHorizontal="12dp"
         android:paddingVertical="0sp"
         android:background="@drawable/sl_keyword_item_background"
         android:text="우아한"
