--- a/OOTDAY/app/src/main/res/layout/closet_mp_plus_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_mp_plus_item.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="34sp"
+    android:layout_height="34dp"
     app:cardElevation="0dp"
-    app:cardCornerRadius="12sp"
-    android:layout_margin="4sp"
+    app:cardCornerRadius="12dp"
+    android:layout_margin="4dp"
     >
 
         <ImageView
