--- a/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.bottari.ootday.data.service.RatioFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="115sp"
-    android:layout_height="139sp"
-    android:layout_marginBottom="5sp"
-    >
-
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="2dp"
+    app:ratio="115:139" >
 
         <ImageButton
             android:id="@+id/plus_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/sl_plus_closet_selector"
-            android:background="@drawable/rounded_item_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/sl_plus_closet_selector"/>
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-</FrameLayout>
+</com.bottari.ootday.data.service.RatioFrameLayout>
