--- a/OOTDAY/app/src/main/res/layout/dialog_add_mood.xml
+++ b/OOTDAY/app/src/main/res/layout/dialog_add_mood.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="270sp"
+    android:layout_width="270dp"
     android:layout_height="wrap_content"
-    android:paddingVertical="20sp"
-    android:paddingHorizontal="10sp"
+    android:paddingVertical="20dp"
+    android:paddingHorizontal="10dp"
     android:background="@drawable/rounded_dialog_background">
 
     <TextView
@@ -13,10 +13,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Mood를 추가하시겠습니까?"
-    android:textSize="18sp"
+    android:textSize="18dp"
     android:fontFamily="@font/noto_sans_kr_bold"
     android:textColor="@color/font_gray"
-        android:layout_marginTop="-10sp"
+        android:layout_marginTop="-10dp"
     android:alpha="0.8"
     android:textStyle="bold"
     app:layout_constraintTop_toTopOf="parent"
@@ -25,18 +25,18 @@
 
     <EditText
         android:id="@+id/plus_edit_text"
-        android:layout_width="0sp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="입력은 한글로, 최대 5글자까지 가능해요."
         android:fontFamily="@font/noto_sans_kr_regular"
         android:textSize="@dimen/body_small_size"
-        android:paddingVertical="2sp"
+        android:paddingVertical="2dp"
         android:gravity="center"
         android:maxLength="5"
         android:textColorHint="@color/gray_200"
         android:backgroundTint="@color/sl_edittext_selector"
-        android:layout_marginTop="5sp"
-        android:layout_marginBottom="17sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="17dp"
         app:layout_constraintTop_toBottomOf="@+id/dialog_title"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_edittext"
 
-        android:layout_marginBottom="2sp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintEnd_toEndOf="@+id/plus_edit_text"
         app:layout_constraintTop_toTopOf="@+id/plus_edit_text"
         app:layout_constraintBottom_toBottomOf="@+id/plus_edit_text"
@@ -58,7 +58,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="0sp"
+        android:layout_marginHorizontal="0dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
