--- a/OOTDAY/app/src/main/res/layout/dialog_picture.xml
+++ b/OOTDAY/app/src/main/res/layout/dialog_picture.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="30sp"
-    android:layout_marginBottom="70sp"
-    android:background="@drawable/rounded_dialog_camera_background">
+    android:layout_marginHorizontal="30dp"
+    android:layout_marginBottom="70dp"
+    app:cardCornerRadius="16dp"  app:cardElevation="4dp"      >
 
     <LinearLayout
         android:id="@+id/select_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="70sp"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/use_camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/sl_camera_dialog_selector"
+            android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingTop="5sp">
+            android:paddingVertical="4dp">
 
             <ImageView
                 android:id="@+id/camera_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10sp"
+                android:layout_marginRight="10dp"
                 android:src="@drawable/ic_camera" />
 
             <TextView
@@ -43,24 +41,24 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1sp"
+            android:layout_height="1dp"
             android:background="@color/gray_200" />
 
         <LinearLayout
             android:id="@+id/use_gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/sl_camera_dialog_selector"
+            android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="5sp">
+            android:paddingVertical="4dp">
 
             <ImageView
                 android:id="@+id/gallery_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10sp"
+                android:layout_marginRight="10dp"
                 android:src="@drawable/ic_gallery" />
 
             <TextView
@@ -73,4 +71,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
