--- a/OOTDAY/app/src/main/res/layout/first_closet_mood_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/first_closet_mood_fragment.xml
@@ -12,8 +12,8 @@
         android:text="선호하는 코디 분위기를 선택해 주세요."
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textSize="@dimen/body_medium_large_size"
-        android:layout_marginTop="25sp"
-        android:layout_marginLeft="20sp"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +21,7 @@
         android:id="@+id/mood_title_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-25sp"
+        android:layout_marginTop="-25dp"
         android:text="최대 3개까지 선택할 수 있어요!"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textSize="@dimen/body_medium_large_size"
@@ -32,12 +32,11 @@
     <FrameLayout
         android:id="@+id/mood_frame"
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginTop="10sp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="347dp"
         android:background="@drawable/rounded_background"
-        app:layout_constraintBottom_toBottomOf="@+id/finish_mood_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mood_title_text2">
@@ -52,9 +51,9 @@
                 android:id="@+id/ootd_mood_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
+                android:layout_marginLeft="15dp"
                 android:fontFamily="@font/noto_sans_kr_bold"
-                android:paddingTop="3sp"
+                android:paddingTop="3dp"
                 android:text="OOTD Mood"
                 android:textSize="@dimen/body_medium_large_size" />
 
@@ -62,9 +61,9 @@
                 android:id="@+id/ootd_mood_max_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="7sp"
+                android:layout_marginLeft="7dp"
                 android:fontFamily="@font/noto_sans_kr_regular"
-                android:paddingTop="6sp"
+                android:paddingTop="6dp"
                 android:text="(0/3)"
                 android:textColor="@color/gray_100"
                 android:textSize="@dimen/body_mega_small_size" />
@@ -74,10 +73,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mood_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10sp"
-            android:layout_marginTop="45sp"
-            android:layout_marginBottom="20sp"
+            android:layout_height="200dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="20dp"
             />
     </FrameLayout>
 
@@ -85,7 +84,7 @@
         android:id="@+id/finish_mood_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20sp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/sl_select_finish_selector"
         android:enabled="false"
 
