--- a/OOTDAY/app/src/main/res/layout/first_closet_result_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/first_closet_result_fragment.xml
@@ -10,11 +10,11 @@
         android:id="@+id/grid_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="25sp"
+        android:layout_margin="25dp"
         android:columnCount="2"
         android:rowCount="3"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/link_container"
+        app:layout_constraintBottom_toTopOf="@+id/download_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,7 +25,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -37,7 +37,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -49,7 +49,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -61,7 +61,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -73,7 +73,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -85,7 +85,7 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="4sp"
+            android:layout_margin="4dp"
             android:background="@drawable/rounded_image_background"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
@@ -99,8 +99,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/back_home"
         android:gravity="center_vertical"
-        android:layout_marginBottom="25sp"
-        android:layout_marginRight="30sp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="30dp"
         >
 
         <ImageButton
@@ -110,7 +110,7 @@
             android:src="@drawable/sl_download_selector"
             android:background="@null"
             android:clickable="false"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="10dp"
             />
 
         <TextView
@@ -129,8 +129,8 @@
         android:id="@+id/back_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30sp"
-        android:layout_marginHorizontal="20sp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="20dp"
         android:text="홈으로 돌아가기"
         android:textColor="@color/font_gray"
         android:fontFamily="@font/noto_sans_kr_bold"
