--- a/OOTDAY/app/src/main/res/layout/home_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/home_fragment.xml
@@ -11,9 +11,10 @@
 
     <ImageView
         android:id="@+id/home_weather_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
         android:src="@drawable/img_card_weather"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +27,7 @@
         android:background="@drawable/cover_home_frame_drawable"
         android:alpha="0.1"
         android:visibility="gone"
-        android:elevation="10sp"
+        android:elevation="10dp"
         app:layout_constraintTop_toTopOf="@id/home_card_frame"
         app:layout_constraintBottom_toBottomOf="@id/home_card_frame"
         app:layout_constraintStart_toStartOf="@id/home_card_frame"
@@ -37,9 +38,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rounded_background"
-        android:layout_marginTop="20sp"
-        android:elevation="1sp"
-        android:layout_marginHorizontal="26sp"
+        android:layout_marginTop="20dp"
+        android:elevation="1dp"
+        android:layout_marginHorizontal="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_weather_view"
@@ -49,14 +50,14 @@
             android:id="@+id/add_item_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="1sp">
+            android:elevation="1dp">
 
             <ImageView
                 android:id="@+id/closet_empty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:elevation="2sp"
+                android:elevation="2dp"
                 android:src="@drawable/img_empty_closet"
                 app:layout_constraintVertical_chainStyle="packed"
                 app:layout_constraintTop_toTopOf="parent"
@@ -71,8 +72,8 @@
             android:id="@+id/grid_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8sp"
-            android:paddingBottom="50sp"
+            android:layout_margin="2dp"
+            android:paddingBottom="50dp"
             android:columnCount="2"
             android:rowCount="2"
             android:visibility="visible">
@@ -83,7 +84,7 @@
                 android:layout_height="0dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_margin="4sp"
+                android:layout_margin="2dp"
                 android:background="@drawable/rounded_image_background"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
@@ -95,7 +96,7 @@
                 android:layout_height="0dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_margin="4sp"
+                android:layout_margin="2dp"
                 android:background="@drawable/rounded_image_background"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
@@ -107,7 +108,7 @@
                 android:layout_height="0dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_margin="4sp"
+                android:layout_margin="2dp"
                 android:background="@drawable/rounded_image_background"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
@@ -119,7 +120,7 @@
                 android:layout_height="0dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_margin="4sp"
+                android:layout_margin="2dp"
                 android:background="@drawable/rounded_image_background"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
@@ -129,25 +130,34 @@
 
     </FrameLayout>
 
-    <ImageView
+    <com.bottari.ootday.data.service.RatioFrameLayout
         android:id="@+id/plus_closet_frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-4sp"
-        android:elevation="2sp"
-        android:src="@drawable/frm_plus_my_closet"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:ratio="320:48"
+        android:layout_marginBottom="-5dp"
+        android:layout_marginHorizontal="22dp"
+        android:elevation="2dp"
+        android:background="@drawable/frm_plus_my_closet"
         app:layout_constraintBottom_toBottomOf="@id/home_card_frame"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/home_card_frame"
+        app:layout_constraintStart_toStartOf="@id/home_card_frame" />
 
     <Button
         android:id="@+id/home_find_item_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25sp"
-        android:layout_marginBottom="20sp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
 
-        android:background="@drawable/sl_find_passion_button_selector"
+        android:layout_marginHorizontal="30dp"
+        android:padding="0dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:text="착장에 어울리는 아이템 찾기"
+        android:textColor="@color/sl_button_text_color"
+        android:textSize="@dimen/body_medium_large_size"
+        android:background="@drawable/sl_button_selector"
+
         android:enabled="true"
         app:backgroundTint="@null"
         app:elevation="0dp"
