--- a/OOTDAY/app/src/main/res/layout/login_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/login_activity.xml
@@ -13,7 +13,8 @@
     <FrameLayout
         android:id="@+id/title_id1"
         android:layout_width="match_parent"
-        android:layout_height="160sp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:gravity="center"
+        android:layout_marginTop="50dp"
         android:text="로그인"
         android:textSize="@dimen/title_large_size"
         app:layout_constraintTop_toBottomOf="@+id/title_id1"
@@ -46,7 +48,7 @@
         android:id="@+id/login_text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-20sp"
+        android:layout_marginTop="-20dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
         android:text="스타일링 추천은 로그인 후 이용할 수 있어요."
@@ -57,11 +59,12 @@
 
     <EditText
         android:id="@+id/login_area"
-        android:layout_width="344sp"
-        android:layout_height="50sp"
-        android:layout_marginTop="42sp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginHorizontal="30dp"
         android:hint="아이디를 입력해주세요."
-        android:paddingLeft="20sp"
+        android:paddingLeft="20dp"
         android:backgroundTint="@color/sl_edittext_selector"
         android:textColorHint="@color/gray_200"
         android:textSize="@dimen/title_small_size"
@@ -74,10 +77,11 @@
 
     <EditText
         android:id="@+id/password_area"
-        android:layout_width="344sp"
-        android:layout_height="50sp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:hint="비밀번호를 입력해주세요."
-        android:paddingLeft="20sp"
+        android:paddingLeft="20dp"
+        android:layout_marginHorizontal="30dp"
         android:backgroundTint="@color/sl_edittext_selector"
         android:textColorHint="@color/gray_200"
         android:textSize="@dimen/title_small_size"
@@ -90,21 +94,21 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/password_toggle_button"
-        android:layout_width="48sp" android:layout_height="48sp"
+        android:layout_width="48dp" android:layout_height="48dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ps_visibility_selector"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/login_area"
         app:layout_constraintTop_toTopOf="@+id/password_area"
         app:layout_constraintBottom_toBottomOf="@+id/password_area"
-        android:layout_marginBottom="5sp"/>
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/login_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15sp"
-        android:layout_marginStart="40sp"
+        android:layout_marginTop="-15dp"
+        android:layout_marginStart="40dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text=""
         android:textColor="@color/font_red"
@@ -123,8 +127,8 @@
 
         <CheckBox
             android:id="@+id/remember_me_checkbox"
-            android:layout_width="24sp"
-            android:layout_height="24sp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:background="@drawable/sl_login_checkbox_selector"
             android:button="@null"
             />
@@ -137,23 +141,27 @@
             android:textSize="@dimen/title_small_size"
             android:textColor="@color/signup_text_color"
             android:alpha="0.8"
-            android:paddingLeft="4sp"
+            android:paddingLeft="4dp"
             />
 
     </LinearLayout>
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100sp"
-        android:layout_marginHorizontal="20sp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/password_area"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-
-        android:background="@drawable/sl_login_button_selector"
+        android:layout_marginHorizontal="25dp"
+        android:padding="0dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:text="Login"
+        android:textColor="@color/sl_button_text_color"
+        android:textSize="@dimen/body_medium_large_size"
+        android:background="@drawable/sl_button_selector"
 
         app:backgroundTint="@null"
         app:elevation="0dp"
@@ -170,7 +178,8 @@
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/login_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="150dp">
 
         <TextView
             android:id="@+id/text_signup"
@@ -182,7 +191,7 @@
             android:fontFamily="@font/noto_sans_kr_regular"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginRight="16sp"/>
+            android:layout_marginRight="16dp"/>
 
         <TextView
             android:id="@+id/divider1"
@@ -191,7 +200,7 @@
             android:text=" | "
             android:textColor="@color/gray_100"
             android:textSize="@dimen/title_small_size"
-            android:layout_marginRight="16sp"/>
+            android:layout_marginRight="16dp"/>
 
         <TextView
             android:id="@+id/text_find_id"
@@ -203,7 +212,7 @@
             android:fontFamily="@font/noto_sans_kr_regular"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginRight="16sp" />
+            android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/divider2"
@@ -212,7 +221,7 @@
             android:text=" | "
             android:textColor="@color/gray_100"
             android:textSize="@dimen/title_small_size"
-            android:layout_marginRight="16sp"/>
+            android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/text_find_password"
