--- a/OOTDAY/app/src/main/res/layout/main_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/main_activity.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main_app_bar_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,9 +16,10 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:background="@drawable/ic_ootday_banner"
-            android:layout_height="wrap_content"
+            android:background="@color/gray_300"
+            android:layout_height="70dp"
             app:layout_scrollFlags="noScroll">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -30,11 +31,25 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/btn_back"
                     android:contentDescription="뒤로가기"
-                    android:padding="10sp"
+                    android:layout_marginLeft="10dp"
                     android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+
+                    android:src="@drawable/ic_logo_text"
+                    android:layout_marginRight="10dp"
+                    app:layout_constraintWidth_percent="0.25"
+                    app:layout_constraintHeight_percent="0.5"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 
@@ -48,7 +63,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="70sp"
+        android:layout_height="70dp"
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,8 +79,9 @@
         android:id="@+id/main_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:defaultNavHost="true"
-        android:layout_width="0sp"
-        android:layout_height="0sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="3dp"
         android:tag="main_fragment_container"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
