--- a/OOTDAY/app/src/main/res/layout/second_closet_loading_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/second_closet_loading_fragment.xml
@@ -10,8 +10,8 @@
         android:id="@+id/second_loading_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20sp"
-        android:paddingVertical="30sp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="30dp"
         android:text="OOTDay가 착장에 어울리는 아이템을 찾고있어요."
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textSize="@dimen/body_large_size"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="70sp"
+            android:layout_marginBottom="70dp"
             android:src="@drawable/ic_loading_second" />
     </FrameLayout>
 
@@ -47,7 +47,7 @@
         android:text="아이템 찾는 중..."
         android:textColor="@color/brown_100"
         android:textSize="@dimen/body_large_size"
-        android:layout_marginTop="230sp"
+        android:layout_marginTop="230dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/second_loading_title"/>
@@ -60,7 +60,7 @@
         android:text="잠시만 기다려주세요..."
         android:textColor="@color/gray_200"
         android:textSize="@dimen/body_medium_size"
-        android:layout_marginTop="-10sp"
+        android:layout_marginTop="-10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/find_item_text1"/>
