--- a/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
@@ -9,10 +9,9 @@
         android:id="@+id/step2_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingHorizontal="30sp"
-        android:paddingVertical="2sp"
-        android:text="본인 확인을 위해 휴대폰 인증을
-        진행해주세요."
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="2dp"
+        android:text="본인 확인을 위해 휴대폰 인증을 진행해주세요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,8 +22,9 @@
         android:id="@+id/step2_phone_number_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16sp"
-        android:paddingVertical="4sp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"
+        android:maxWidth="400dp"
         android:hint="휴대폰 번호를 입력해주세요."
         android:textColorHint="@color/gray_200"
         android:fontFamily="@font/noto_sans_kr_medium"
@@ -33,9 +33,9 @@
         android:maxLines="1"
         android:maxLength="11"
         android:inputType="number"
-        android:layout_marginStart="24sp"
-        android:layout_marginTop="54sp"
-        android:layout_marginEnd="12sp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintEnd_toStartOf="@+id/step2_check_auth_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step2_title"
@@ -43,8 +43,8 @@
 
     <Button
         android:id="@+id/step2_get_auth_button"
-        android:layout_width="63sp"
-        android:layout_height="28sp"
+        android:layout_width="63dp"
+        android:layout_height="28dp"
         android:background="@drawable/sl_signup_get_selector"
         app:backgroundTint="@null"
         app:elevation="0dp"
@@ -62,14 +62,15 @@
         android:id="@+id/step2_phone_number_confirm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16sp"
-        android:paddingVertical="4sp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"
+        android:maxWidth="400dp"
         android:hint="인증 번호를 입력해주세요."
         android:textColorHint="@color/gray_200"
         android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="@id/step2_phone_number_input"
         app:layout_constraintStart_toStartOf="@id/step2_phone_number_input"
@@ -96,7 +97,7 @@
         android:id="@+id/step2_auth_number_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15sp"
+        android:layout_marginTop="-15dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text="안녕하세요"
         android:textColor="@color/font_red"
@@ -109,8 +110,8 @@
 
     <Button
         android:id="@+id/step2_check_auth_button"
-        android:layout_width="63sp"
-        android:layout_height="28sp"
+        android:layout_width="63dp"
+        android:layout_height="28dp"
         android:background="@drawable/sl_signup_check_selecter"
         app:backgroundTint="@null"
         app:elevation="0dp"
@@ -122,15 +123,20 @@
 
     <Button
         android:id="@+id/step2_next_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/step2_phone_number_confirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-
-        android:background="@drawable/sl_next_button_selector"
+        android:layout_marginHorizontal="30dp"
+        android:padding="0dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:text="다음"
+        android:textColor="@color/sl_button_text_color"
+        android:textSize="@dimen/body_medium_large_size"
+        android:background="@drawable/sl_button_selector"
 
         app:backgroundTint="@null"
         app:elevation="0dp"
