--- a/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
@@ -9,8 +9,8 @@
         android:id="@+id/step3_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="30sp"
-        android:paddingVertical="2sp"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="2dp"
         android:text="로그인에 사용할 아이디를 만들어주세요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -22,8 +22,9 @@
         android:id="@+id/step3_id_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16sp"
-        android:paddingVertical="4sp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"
+        android:maxWidth="400dp"
         android:hint="영문과 숫자를 조합해 5-10자만 입력할 수 있어요."
         android:textColorHint="@color/gray_200"
         android:fontFamily="@font/noto_sans_kr_medium"
@@ -31,8 +32,8 @@
         android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         android:maxLength="20"
-        android:layout_marginVertical="54sp"
-        android:layout_marginHorizontal="24sp"
+        android:layout_marginVertical="54dp"
+        android:layout_marginHorizontal="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step3_title"/>
@@ -41,7 +42,7 @@
         android:id="@+id/step3_id_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15sp"
+        android:layout_marginTop="-15dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text="안녕하세요"
         android:textColor="@color/font_red"
@@ -53,15 +54,21 @@
 
     <Button
         android:id="@+id/step3_next_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/step3_id_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
 
-        android:background="@drawable/sl_next_button_selector"
+        android:layout_marginHorizontal="30dp"
+        android:padding="0dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:text="다음"
+        android:textColor="@color/sl_button_text_color"
+        android:textSize="@dimen/body_medium_large_size"
+        android:background="@drawable/sl_button_selector"
 
         app:backgroundTint="@null"
         app:elevation="0dp"
