--- a/OOTDAY/app/src/main/res/layout/sign_up_step4.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step4.xml
@@ -9,8 +9,8 @@
         android:id="@+id/step4_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="30sp"
-        android:paddingVertical="2sp"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="2dp"
         android:text="비밀번호를 설정해주세요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -22,8 +22,9 @@
         android:id="@+id/step4_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16sp"
-        android:paddingVertical="4sp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"
+        android:maxWidth="400dp"
         android:hint="영문과 특수문자를 포함한 8-10자여야 해요."
         android:inputType="textPassword"
         android:textColorHint="@color/gray_200"
@@ -31,8 +32,8 @@
         android:textSize="@dimen/body_medium_size"
         android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
-        android:layout_marginVertical="54sp"
-        android:layout_marginHorizontal="24sp"
+        android:layout_marginVertical="54dp"
+        android:layout_marginHorizontal="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step4_title"/>
@@ -41,7 +42,7 @@
         android:id="@+id/step4_ps_input_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15sp"
+        android:layout_marginTop="-15dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text="안녕하세요"
         android:textColor="@color/font_red"
@@ -53,30 +54,30 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/step4_password_input_toggle_button"
-        android:layout_width="48sp" android:layout_height="48sp"
+        android:layout_width="48dp" android:layout_height="48dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ps_visibility_selector"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@id/step4_password_input"
         app:layout_constraintBottom_toBottomOf="@+id/step4_password_input"
-        android:layout_marginBottom="5sp"/>
+        android:layout_marginBottom="5dp"/>
 
     <EditText
         android:id="@+id/step4_password_confirm_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16sp"
-        android:paddingVertical="4sp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"
         android:hint="비밀번호를 한 번 더 입력해주세요."
         android:inputType="textPassword"
         android:textColorHint="@color/gray_200"
         android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
-        android:layout_marginTop="16sp"
-        android:layout_marginHorizontal="24sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +87,7 @@
         android:id="@+id/step4_ps_confirm_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15sp"
+        android:layout_marginTop="-15dp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text="안녕하세요"
         android:textColor="@color/font_red"
@@ -98,29 +99,35 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/step4_password_confirm_toggle_button"
-        android:layout_width="48sp"
-        android:layout_height="48sp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ps_visibility_selector"
         android:scaleType="centerInside"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/step4_password_confirm_input"
         app:layout_constraintBottom_toBottomOf="@+id/step4_password_confirm_input"
-        android:layout_marginBottom="5sp"/>
+        android:layout_marginBottom="5dp"/>
 
 
 
     <Button
         android:id="@+id/step4_next_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/step4_password_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
 
-        android:background="@drawable/sl_next_button_selector"
+        android:layout_marginHorizontal="30dp"
+        android:padding="0dp"
+        android:fontFamily="@font/noto_sans_kr_bold"
+        android:text="다음"
+        android:textColor="@color/sl_button_text_color"
+        android:textSize="@dimen/body_medium_large_size"
+        android:background="@drawable/sl_button_selector"
 
         app:backgroundTint="@null"
         app:elevation="0dp"
