ref : 주기능 1번 로직 구현 완료(연동) + home Fragment 옷장 최신화 완료

--- a/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
@@ -72,6 +72,7 @@
         android:textSize="@dimen/body_medium_size"
         android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
+        android:maxLength="6"
         app:layout_constraintEnd_toEndOf="@id/step2_phone_number_input"
         app:layout_constraintStart_toStartOf="@id/step2_phone_number_input"
         app:layout_constraintTop_toBottomOf="@+id/step2_phone_number_input"
