ref : 마지막 다듬기 작업 완 (주기능 1 result 똑같은 이미지 출력 blocking, 인증번호 확인 로직 수정)

--- a/OOTDAY/app/src/main/res/layout/home_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/home_fragment.xml
@@ -76,7 +76,7 @@
             android:paddingBottom="50dp"
             android:columnCount="2"
             android:rowCount="2"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/item_image1"
